--- a/primeiro-programa-java/.classpath
+++ b/primeiro-programa-java/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="Lib/poi-5.0.0.jar"/>
 	<classpathentry kind="lib" path="Lib/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="Lib/gson-2.8.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
